--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
         "symfony/web-link": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "symfony/webpack-encore-bundle": "^1.6",
+        "symfony/yaml": "4.3.*",
+        "webonyx/graphql-php": "^0.13.8"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
