--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
+        "@babel/preset-env": "^7.6.3",
+        "@babel/preset-react": "^7.6.3",
         "@symfony/webpack-encore": "^0.28.0",
         "core-js": "^3.0.0",
         "node-sass": "^4.12.0",
@@ -14,5 +17,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "axios": "^0.19.0",
+        "prop-types": "^15.7.2",
+        "react": "^16.10.2",
+        "react-dom": "^16.10.2"
     }
 }
